IDs applied to rock, paper & scissors button
IDs applied to button for JS interactivity

--- a/rock-paper-scissors-game/index.html
+++ b/rock-paper-scissors-game/index.html
@@ -19,9 +19,9 @@
         </p>
       </section>
       <section class="button-section">
-        <button class="btn">ROCK</button>
-        <button class="btn">PAPER</button>
-        <button class="btn">SCISSORS</button>
+        <button class="btn" id="btn-rock">ROCK</button>
+        <button class="btn" id="btn-paper">PAPER</button>
+        <button class="btn" id="btn-scissors">SCISSORS</button>
       </section>
       <section class="result-section">
         <p>You choose:</p>
@@ -30,5 +30,6 @@
       </section>
     </main>
     <footer>Copyright &copy; 2025</footer>
+    <script src="rock-paper-scissors.js"></script>
   </body>
 </html>
