checking winner of the game completed
displaying user & computer choice also completed

--- a/rock-paper-scissors-game/index.html
+++ b/rock-paper-scissors-game/index.html
@@ -24,9 +24,9 @@
         <button class="btn" id="btn-scissors">SCISSORS</button>
       </section>
       <section class="result-section">
-        <p>You choose:</p>
-        <p>Computer choose:</p>
-        <h2></h2>
+        <p id="user-choice"></p>
+        <p id="computer-choice"></p>
+        <h2 id="result"></h2>
       </section>
     </main>
     <footer>Copyright &copy; 2025</footer>
